Add js directory and make changes in scripts.js

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <h1>Triangle Tracker</h1>
-   <input type="number" name="side1" id="side1" value="">
-   <input type="number" name="side2" id="side2" value="">
-   <input type="number" name="side3" id="side3" value="">
-  <button type="submit" onclick="myFunction()">Submit</button>
-  <p id="results"></p>
-  <img src="images/Equilateral.pjg" alt="Equilateral triangle">
-  <img src="images/isosceles.pjg" alt="isosceles triangle">
-  <img src="images/scalene.pjg" alt="scalene triangle">
-  <script src="scripts.js" charset="utf-8"></script>
+    <input type="number" name="side1" id="side1" value="">
+    <input type="number" name="side2" id="side2" value="">
+    <input type="number" name="side3" id="side3" value="">
+    <button type="submit" onclick="myFunction()" name="submit">Submit</button>
+    <p id="results"></p>
+    <img src="images/Equilateral.pjg" alt="Equilateral triangle">
+    <img src="images/isosceles.pjg" alt="isosceles triangle">
+    <img src="images/scalene.pjg" alt="scalene triangle">
+    <script src="scripts.js" charset="utf-8"></script>
   </body>
 </html>
